--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
   "name": "video-chat-app",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@rails/webpacker": "^3.0.2",
+    "babel-preset-react": "^6.24.1",
+    "coffeescript": "1.12.7",
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^2.9.1"
+  }
 }
