integration tests passing

--- a/test/fixtures/rooms.yml
+++ b/test/fixtures/rooms.yml
@@ -10,4 +10,5 @@ unrestricted_room:
 restricted_room:
   name: Restricted Room
   status: restricted
+  password: <%= BCrypt::Password.create('foobar') %>
   user: kramer
